--- a/report/report_template.tex
+++ b/report/report_template.tex
@@ -375,7 +375,8 @@ For an exemplary high-risk location (junction 2482, $r = 6.43$),
 Analyzing the crash data, we find all of them involved least one additional vehicle, predominantly (20) cars, 
 and mainly occurred during turning or crossing maneuvers. \cref{fig:junction_details} (c) shows how car lanes cross the bicycle lane at this location.
 
-We evaluated the algorithm using 1,000 random origin–destination pairs, comparing the shortest-path baseline against safest alternatives across a range of allowable detour and junction-risk constraints ~\citep{NateraOrozco2020}.
+We evaluated the algorithm using 1,000 random origin–destination pairs, comparing the shortest-path baseline against safest alternatives across a range of allowable detour and 
+junction-risk constraints ~\citep{NateraOrozco2020}.
 
 \begin{table}[ht]
 \centering
