add link to repo in conclusion

--- a/report/report_template.tex
+++ b/report/report_template.tex
@@ -416,6 +416,8 @@ Our approach faces two main limitations. First, official crash data capture only
 Our junction exposure model assumes uniform flow and ignores turning movements. This misallocates exposure where one main road dominates side streets. Systematic biases in crowdsourced exposure data limit risk estimates' accuracy. While graph neural network methods can interpolate traffic volumes from sparse data \citep{kaiser2025spatiotemporalgraphneuralnetwork}, they require manual validation counts. Cities with sparse counting networks like Berlin could address this by expanding automated counting infrastructure.
 
 Despite these limitations, the approach scales to any city with crash records and crowdsourced trip data, requiring only modest detours for substantially safer routes.
+
+Code and supplementary materials are available at \url{https://github.com/ytobiaz/data_literacy}.
 \clearpage
 
 \section*{Contribution Statement}
