fixed a bibtex entry

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -215,7 +215,7 @@ Volume},
 }
 
 @online{BerlinZaehlen_Fahrradbarometer,
- author = {{Senatsverwaltung für Mobilität, Verkehr, Klimaschutz und Umwelt}},
+ author = {{Senate Department for Urban Mobility, Transport, Climate Action and the Environment}},
  langid = {german},
  title = {Zählstellen und Fahrradbarometer: Fahrradverkehr in Zahlen},
  url = {https://www.berlin.de/sen/uvk/mobilitaet-und-verkehr/verkehrsplanung/radverkehr/weitere-radinfrastruktur/zaehlstellen-und-fahrradbarometer/},
